--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <h1>"Git Start"</h1>
+   <h1>Git Start</h1>
+   <h2>Не судите строго</h2>
 </body>
 </html>
