--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
    <h1>Git Start</h1>
    <h2>Lesson - #1</h2>
+   <a href="https://glo.academy/">при поддержке GloAkademy</a>
 </body>
 </html>
